Fix: contrasted colors, copy, end session timing, etc.

--- a/static/style/index.css
+++ b/static/style/index.css
@@ -1,13 +1,16 @@
 #wrapper > #content {
     max-width: 960px;
-    padding: calc(var(--sp) * 4);
+    padding: calc(var(--sp) * 4) calc(var(--sp) * 4) 0 calc(var(--sp) * 4) ;
+
+    display: grid;
+    grid-template: 8fr 1fr / 1fr;
+
+    height: 100%;
 }
 
 #wrapper > #content > #hero  {
     font-family: var(--f-el);
-    font-size: 2.5em;
-
-    grid-column: 2 / 7;
+    font-size: 2.1em;
 
     margin-bottom: calc(var(--sp) * 4);
 }
@@ -15,18 +18,27 @@
     left: -1.3ch !important;
 }
 
+#wrapper > #content > a {
+    display: inline-block;
+    position: relative;
+}
+
 #wrapper > #content > a > div#continue {
     display: inline-block;
     
     font-family: 'IBM Plex Mono Light';
-    font-size: 1em;
-    padding: var(--sp);
+    font-size: .85em;
+
+    text-decoration: underline;
+    -moz-text-decoration: underline;
+
+    padding: var(--sp) calc(var(--sp) * 1.75);
     margin: 0;
 
     opacity: 0;
     visibility: hidden;
-    border: 1px solid white;
-    color: white;
+    /* border: 0.5px solid rgba(255, 255, 255, 0.8); */
+    color: var(--t-cl);
     background-color: transparent;
 
     cursor: pointer;
@@ -46,8 +58,8 @@
     -ms-transition: opacity .7s cubic-bezier(0.445, 0.05, 0.55, 0.95);
 }
 #wrapper > #content > a > div#continue:hover {
-    background-color: rgba(255, 255, 255, 0.1);
+    background-color: var(--c-el-h);
 }
 #wrapper > #content > a > div#continue:active {
-    background-color: rgba(255, 255, 255, 0.5);
+    background-color: var(--c-el-a);
 }
